CREATE TABLE funcionarios
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome       VARCHAR(150) NOT NULL,
    cpf        VARCHAR(11)  NOT NULL,
    cargo      VARCHAR(20)  NOT NULL,
    telefone   VARCHAR(11)  NOT NULL,
    created_at TIMESTAMP    NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMP,

    CONSTRAINT uk_funcionarios_cpf UNIQUE (cpf),
    CONSTRAINT ck_funcionarios_cargo
        CHECK (cargo IN ('VETERINARIO', 'TOSADOR', 'BANHISTA', 'ATENDENTE', 'GERENTE'))
);
