CREATE TABLE IF NOT EXISTS tutores (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome        VARCHAR(150)  NOT NULL,
    email       VARCHAR(150)  NOT NULL UNIQUE,
    telefone    VARCHAR(255)  NOT NULL,
    cep         VARCHAR(8)    NOT NULL,
    logradouro  VARCHAR(150)  NOT NULL,
    numero      VARCHAR(6),
    complemento VARCHAR(100),
    bairro      VARCHAR(150)  NOT NULL,
    cidade      VARCHAR(150)  NOT NULL,
    estado      VARCHAR(2)    NOT NULL
);